--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,16 @@
-body{
+
+body {
+    background-image: url(../img/plantilla-colorida-error-404_343694-152.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-color: #f0f0f0;
 
     display: flex;
     flex-direction: column;
-    min-height:100vh;
-    }
+    min-height: 100vh;
+}
+
     
     main{
     
