--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
-body{
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
 
-    display: flex;
-    flex-direction: column;
-    min-height:100vh;
-    }
-    
-    main{
-    
-    flex-grow: 1;
-    
-    }
-    
+main {
+  flex-grow: 1;
+}
+
+.logoCancion img{
+    width: 35%;
+}
