--- a/css/SobreNosotros.css
+++ b/css/SobreNosotros.css
@@ -61,10 +61,10 @@
 }
 @media only screen and (max-width: 600px) {
     .img-nosotros{
-        width: 270px;
-        height: 270px;
+        width: 300px;
+        height: 300px;
         margin: 10px;
-        border: solid 2px rgb(97, 4, 4);
+        border: solid 5px rgb(190, 48, 48);
         margin: 50px -20px;
     }
     .section-info{
@@ -79,21 +79,28 @@
         margin: 0px -10px;
     }
     .title-Sobrenosotros{
-        font-size: 30px;
-        margin: 10px;
+        font-size: 45px;
+        margin: 15px;
+        font-family: sans-serif;
+        font-weight: bold;
     }
     .info{
         margin: 0px auto;
 
     }
     .info-nosotros{
-        margin: 10px 150px;
+        margin: 10px 120px;
     }
     .avatar{
         width: 170px;
         height: 170px;
     }
-   
+    .title-quienessomos{
+        font-size: 40px;
+    }
+    .avatar{
+        border: solid red 3px;
+    }
    
     
 }
