--- a/css/administrador.css
+++ b/css/administrador.css
@@ -1,21 +1,14 @@
-body{
-
-    display: flex;
-    flex-direction: column;
-    min-height:100vh;
-    }
-    
-    main{
-    
-    flex-grow: 1;
-    
-    }
-    
-
-#bgpaginaAdministrador{
-
-
-    background-color: #1f071f;
-background-image: linear-gradient(0deg, #1f071f 0%, #3c848c 100%);
-
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
+
+main {
+  flex-grow: 1;
+}
+
+#bgpaginaAdministrador {
+    background-color: #1f071f;
+    background-image: linear-gradient(180deg, #1f071f 0%, #3c848cad 100%);
+}    
