--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,18 @@ main {
 .logoCancion img{
     width: 35%;
 }
+
+@media all and (max-width: 767px){
+  .padreInfo{
+    display: flex;
+    flex-direction: column;
+    justify-content: center ;
+    align-items: center;
+  }
+ 
+  .infoCancion{
+    width: 95%;
+    margin-top: 20px;
+  }
+  
+}
