--- a/css/style.css
+++ b/css/style.css
@@ -17,4 +17,13 @@ body {
     flex-grow: 1;
     
     }
+
+
+   
+    
+    .card-img-top {
+        height: 200px;
+        object-fit: cover;
+    }
+    
     
