--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,15 @@ main {
   width: 35%;
 }
 
+.tamañoLogoGyF {
+  max-width: 20px;
+  max-height: 20px;
+}
+
+.ms-10{
+margin-left: 80px ;
+}
+
 @media all and (max-width: 767px) {
   .padreInfo {
     display: flex;
@@ -30,4 +39,10 @@ main {
 .card-img-top {
   height: 200px;
   object-fit: cover;
+}
+
+@media all and (min-width: 992px) {
+  .bannerscarousel {
+    height: 500px;
+  }
 }
